--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -136,7 +136,7 @@ tail_includes:
   <script src="https://utteranc.es/client.js"
         repo="oil-lamp-cat/oil-lamp-cat.github.io"
         issue-term="pathname"
-        theme="github-light"
+        theme="github-dark"
         crossorigin="anonymous"
         async>
 </script>
